Resolve task BJS2-10900 Implement methods using Stream Api